--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -6,15 +6,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/off_white"
-    tools:context=".fragments.LocationGuide"
     android:clickable="true"
-    android:focusable="true">
+    android:focusable="true"
+    tools:context=".fragments.LocationGuideFragment">
+
+    <TextView
+        android:id="@+id/tvEmptyList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:fontFamily="sans-serif-black"
+        android:gravity="center"
+        android:text="@string/no_guide_added"
+        android:textColor="@color/hint_color"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
         android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/expandable_icon"
+            android:layout_gravity="center"/>
 
         <TextView
             android:id="@+id/tvAddress"
@@ -27,7 +45,6 @@
             android:text="Address"
             android:textColor="#000000"
             android:textSize="@dimen/location_header" />
-
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/swipeContainer"
@@ -49,7 +66,7 @@
         layout="@layout/image_expanded"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible"/>
+        android:visibility="visible" />
 
     <ProgressBar
         android:id="@+id/pbLoading"
