--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="fab_margin_bottom">75dp</dimen>
+    <dimen name="fab_margin_bottom">90dp</dimen>
     <dimen name="action_buttons_margin">15dp</dimen>
     <dimen name="compose_margin">20dp</dimen>
     <dimen name="text_margin">15dp</dimen>
@@ -16,4 +16,6 @@
     <dimen name="header_text_size">30sp</dimen>
     <dimen name="margin_start_screen_text">95dp</dimen>
     <dimen name="guide_content_margin">15dp</dimen>
+    <dimen name="list_item_spacing">16dp</dimen>
+    <dimen name="list_item_spacing_half">8dp</dimen>
 </resources>
