--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -28,7 +28,7 @@
         android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/"
+            android:id="@+id/ivExpandIndicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/expandable_icon"
