User can see timestamp for each travel Guide

--- a/app/src/main/res/drawable/expandable_icon.xml
+++ b/app/src/main/res/drawable/expandable_icon.xml
@@ -10,7 +10,7 @@
     <size
         android:width="250dp"
         android:height="5dp" />
-    <solid android:color="@color/black" />
+    <solid android:color="#8A000000" />
 
     <corners android:radius="200dp" />
 
