--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -49,6 +49,20 @@
                     android:text="username"
                     android:textColor="@color/black"
                     android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/tvCreatedAt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="right"
+                    android:text="10d"
+                    android:textColor="@color/quantum_grey"
+                    android:textSize="12sp"
+                    android:layout_weight="2"/>
+
             </LinearLayout>
 
             <TextView
@@ -56,8 +70,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/guide_content_margin"
-                android:layout_marginEnd="@dimen/guide_content_margin"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="@dimen/guide_content_margin"
                 android:layout_marginBottom="@dimen/text_margin"
                 android:text="TextView"
                 android:textColor="@color/black"
@@ -70,7 +84,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/guide_content_margin"
                 android:layout_marginEnd="@dimen/guide_content_margin"
-                android:layout_marginBottom="@dimen/text_margin"/>
+                android:layout_marginBottom="@dimen/text_margin" />
 
 
         </LinearLayout>
