--- a/app/src/main/res/drawable/profile_icon_pressed.xml
+++ b/app/src/main/res/drawable/profile_icon_pressed.xml
@@ -12,12 +12,12 @@
             <size
                 android:width="@dimen/add_guide_media_btn"
                 android:height="@dimen/add_guide_media_btn" />
-            <solid android:color="@color/off_white" />
+            <solid android:color="@color/media_button_selected" />
             <corners android:radius="@dimen/corner_radius" />
+
         </shape>
     </item>
 
 
-    <item android:drawable="@drawable/ic_baseline_search_24" />
-
+    <item android:drawable="@drawable/ic_user"/>
 </layer-list>
