--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,13 +34,24 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
+        <ImageButton
+            android:id="@+id/ibProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/profile_icon_bg"
+            android:layout_marginStart="16.5dp"
+            android:clickable="true"
+            android:layout_marginTop="10dp"
+            android:fitsSystemWindows="false"
+            android:visibility="visible"/>
+
         <SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16.5dp"
+            android:layout_marginStart="16.5dp"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginEnd="10dp"
             android:clickable="true"
             android:elevation="50dp"
             android:fitsSystemWindows="false"
