--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -87,6 +87,19 @@
                 android:layout_marginBottom="@dimen/text_margin" />
 
 
+            <TextView
+                android:id="@+id/tvLikes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/guide_content_margin"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="@dimen/guide_content_margin"
+                android:layout_marginBottom="@dimen/text_margin"
+                android:text="1"
+                android:textColor="@color/black"
+                android:textSize="13sp"
+                android:textAlignment="textEnd"/>
+
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
