--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="@dimen/action_buttons_margin"
         android:layout_marginBottom="@dimen/fab_margin_bottom"
         android:clickable="true"
+        android:focusable="true"
         android:src="@android:drawable/ic_input_add"
         map:layout_constraintBottom_toBottomOf="parent"
         map:layout_constraintEnd_toEndOf="parent" />
@@ -38,18 +39,18 @@
             android:id="@+id/ibProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/profile_icon_bg"
             android:layout_marginStart="16.5dp"
-            android:clickable="true"
             android:layout_marginTop="10dp"
+            android:background="@drawable/profile_icon_bg"
+            android:clickable="true"
             android:fitsSystemWindows="false"
-            android:visibility="visible"/>
+            android:visibility="visible" />
 
         <SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16.5dp"
+            android:layout_marginStart="7.5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:clickable="true"
@@ -84,13 +85,16 @@
 
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:clickable="false"
             android:visibility="visible">
 
             <FrameLayout
                 android:id="@+id/modalLocationView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:clickable="true"
                 android:elevation="50dp"
+                android:focusable="true"
                 android:visibility="invisible"
                 app:behavior_hideable="false"
                 app:behavior_peekHeight="125dp"
