Like button state reflects whether post was liked by user

--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -101,11 +101,11 @@
                     android:layout_weight="1" />
 
                 <ImageButton
-                    android:id="@+id/imageButton"
+                    android:id="@+id/ibLikes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/like_btn" />
+                    android:background="@drawable/like_btn_bg" />
 
                 <TextView
                     android:id="@+id/tvLikes"
