--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -39,12 +39,15 @@
             android:id="@+id/ibProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16.5dp"
+            android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/profile_icon_bg"
             android:clickable="true"
+            android:contentDescription="@string/profile_icon"
             android:fitsSystemWindows="false"
-            android:visibility="visible" />
+            android:focusable="true"
+            android:visibility="visible"
+            tools:ignore="MissingConstraints" />
 
         <SearchView
             android:id="@+id/searchView"
@@ -53,10 +56,8 @@
             android:layout_marginStart="7.5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:clickable="true"
             android:elevation="50dp"
             android:fitsSystemWindows="false"
-            android:focusable="true"
             android:iconifiedByDefault="true"
             android:layoutDirection="rtl"
             android:padding="0dp"
@@ -102,14 +103,16 @@
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-        <ProgressBar
-            android:id="@+id/pbMaps"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:padding="@dimen/progress_bar_padding"
-            android:visibility="invisible" />
+
     </FrameLayout>
 
+
+    <ProgressBar
+        android:id="@+id/pbMaps"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:padding="@dimen/progress_bar_padding"
+        android:visibility="invisible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
