User can see a list of Guides they have created

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -35,20 +35,6 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <ImageButton
-            android:id="@+id/ibProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/profile_icon_bg"
-            android:clickable="true"
-            android:contentDescription="@string/profile_icon"
-            android:fitsSystemWindows="false"
-            android:focusable="true"
-            android:visibility="visible"
-            tools:ignore="MissingConstraints" />
-
         <SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
@@ -103,9 +89,23 @@
 
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+        <ImageButton
+            android:id="@+id/ibProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/profile_icon_bg"
+            android:contentDescription="@string/profile_icon"
+            android:fitsSystemWindows="false"
+            android:focusable="true"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
+
 
     </FrameLayout>
-
 
     <ProgressBar
         android:id="@+id/pbMaps"
