--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:clickable="true"
     android:orientation="vertical"
     tools:context=".fragments.ProfileFragment">
 
@@ -12,36 +13,42 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        tools:src="@tools:sample/avatars"
+        android:layout_margin="10dp"
+        android:background="@color/white"
         android:contentDescription="@string/profile_icon"
-        android:layout_margin="10dp"/>
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/tvProfile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
         android:layout_gravity="center"
+        android:layout_margin="15dp"
+        android:text="TextView"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="17.5sp"
-        android:layout_margin="15dp"/>
+        android:textSize="17.5sp" />
 
     <Button
         android:id="@+id/logOutBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Log Out" />
+        android:text="@string/log_out" />
 
-    <androidx.core.widget.NestedScrollView
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/text_margin"
-            android:text="@string/large_text" />
-    </androidx.core.widget.NestedScrollView>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:nestedScrollingEnabled="true">
+
+    </androidx.viewpager2.widget.ViewPager2>
 
 </LinearLayout>
