--- a/app/src/main/res/layout/fragment_profile_guide.xml
+++ b/app/src/main/res/layout/fragment_profile_guide.xml
@@ -29,7 +29,8 @@
             android:id="@+id/rvGuides"
             android:nestedScrollingEnabled="false"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:visibility="visible"/>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
