--- a/app/src/main/res/layout/fragment_change_avatar.xml
+++ b/app/src/main/res/layout/fragment_change_avatar.xml
@@ -3,12 +3,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:clickable="true"
+    android:focusable="true"
     tools:context=".fragments.ChangeAvatarFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-medium"
+        android:gravity="center_horizontal|center_vertical"
+        android:text="@string/change_profile_photo"
+        android:textColor="#000000"
+        android:textSize="20sp" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
+        <ImageButton
+            android:id="@+id/ibTempAvatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0"
+            android:background="@android:color/transparent"
+            android:paddingLeft="200dp"
+            android:paddingTop="100dp"
+            android:paddingRight="200dp"
+            android:paddingBottom="100dp"
+            tools:src="@tools:sample/avatars"
+            android:contentDescription="@string/profile_icon" />
+
+        <Button
+            android:id="@+id/photoBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/get_photo" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_weight="5">
+
+            <Button
+                android:id="@+id/discardBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Discard Photo" />
+
+            <Button
+                android:id="@+id/useBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Use Photo" />
+        </LinearLayout>
+    </LinearLayout>
 </FrameLayout>
