--- a/app/src/main/res/layout/fragment_change_avatar.xml
+++ b/app/src/main/res/layout/fragment_change_avatar.xml
@@ -8,34 +8,35 @@
     android:focusable="true"
     tools:context=".fragments.ChangeAvatarFragment">
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center_horizontal|center_vertical"
-        android:text="@string/change_profile_photo"
-        android:textColor="#000000"
-        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/ibTempAvatar"
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-medium"
+            android:gravity="center_horizontal|center_vertical"
+            android:text="@string/change_profile_photo"
+            android:textColor="#000000"
+            android:textSize="20sp"
+            android:layout_marginTop="25dp"/>
+
+        <ImageView
+            android:id="@+id/ivTempAvatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_weight="0"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="75dp"
             android:background="@android:color/transparent"
-            android:paddingLeft="200dp"
-            android:paddingTop="100dp"
-            android:paddingRight="200dp"
-            android:paddingBottom="100dp"
-            tools:src="@tools:sample/avatars"
-            android:contentDescription="@string/profile_icon" />
+            android:contentDescription="@string/profile_icon"
+            tools:src="@tools:sample/avatars" />
 
         <Button
             android:id="@+id/photoBtn"
