--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:padding="0dp"
+            android:layout_margin="0dp"
             android:foreground="@drawable/avatar_overlay">
 
             <ImageButton
