--- a/app/src/main/res/layout/location_guide.xml
+++ b/app/src/main/res/layout/location_guide.xml
@@ -37,7 +37,9 @@
                     android:layout_height="@dimen/avatar_size_img"
                     android:layout_margin="10dp"
                     android:layout_weight="0"
-                    tools:srcCompat="@tools:sample/avatars" />
+                    android:clickable="true"
+                    tools:srcCompat="@tools:sample/avatars"
+                    android:focusable="true" />
 
                 <TextView
                     android:id="@+id/tvUsername"
@@ -48,7 +50,9 @@
                     android:fontFamily="sans-serif-medium"
                     android:text="username"
                     android:textColor="@color/black"
-                    android:textSize="12sp" />
+                    android:textSize="13sp"
+                    android:clickable="true"
+                    android:focusable="true"/>
 
                 <TextView
                     android:id="@+id/tvCreatedAt"
@@ -75,7 +79,7 @@
                 android:layout_marginBottom="@dimen/text_margin"
                 android:text="TextView"
                 android:textColor="@color/black"
-                android:textSize="14sp" />
+                android:textSize="15sp" />
 
             <include
                 android:id="@+id/mediaContainer"
