--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,9 +20,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:padding="0dp"
             android:layout_margin="0dp"
-            android:foreground="@drawable/avatar_overlay">
+            android:padding="0dp">
 
             <ImageButton
                 android:id="@+id/ibAvatar"
@@ -32,6 +31,7 @@
                 android:layout_margin="10dp"
                 android:background="@color/white"
                 android:contentDescription="@string/profile_icon"
+                android:foreground="@drawable/avatar_overlay"
                 tools:src="@tools:sample/avatars" />
         </FrameLayout>
 
@@ -56,8 +56,7 @@
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             />
+            android:layout_height="wrap_content" />
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewPager"
