--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -27,6 +27,7 @@
         android:layout_margin="10dp"
         android:orientation="vertical">
 
+
         <ImageView
             android:id="@+id/ivExpandIndicator"
             android:layout_width="wrap_content"
@@ -45,6 +46,12 @@
             android:text="Address"
             android:textColor="#000000"
             android:textSize="@dimen/location_header" />
+
+        <Button
+            android:id="@+id/followBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Follow" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/swipeContainer"
