Fixed bug that prevented notifications from being received from Parse

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,7 +5,7 @@
         <item name="android:windowTranslucentStatus" tools:ignore="DuplicateDefinition">true</item>
         <!-- light theme navigation and status bar   -->
         <item name="android:windowTranslucentNavigation">true</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>\
+        <item name="android:navigationBarColor">@android:color/transparent</item>
 
         <!-- Primary brand color. -->
         <item name="colorPrimary">#2196F3</item>
