Follow button state updates to reflect whether the user follows a location Follow button can be selected or unselected to follow a location The expand indicator is shown dynamically based on when the LocationGuideFragment is shown

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="black_overlay">#66000000</color>
     <color name="media_button_selected">#CCCCCC</color>
     <color name="hint_color">#A2A2A2</color>
+    <color name="main_color">#003F91</color>
+
 </resources>
