--- a/app/src/main/res/layout/fragment_location_guide_list.xml
+++ b/app/src/main/res/layout/fragment_location_guide_list.xml
@@ -47,13 +47,19 @@
             android:textColor="#000000"
             android:textSize="@dimen/location_header" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/followBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Follow" />
+            android:layout_marginStart="7.5dp"
+            android:layout_marginEnd="7.5dp"
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/follow_btn_bg"
+            android:text="Follow"
+            android:elevation="0dp"/>
 
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipeContainer"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -63,6 +69,13 @@
                 android:nestedScrollingEnabled="false"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
+
+            <ProgressBar
+                android:id="@+id/pbLoading"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/progress_bar_padding" />
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
@@ -74,10 +87,4 @@
         android:layout_height="match_parent"
         android:visibility="visible" />
 
-    <ProgressBar
-        android:id="@+id/pbLoading"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="@dimen/progress_bar_padding" />
 </FrameLayout>
