--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -42,12 +42,11 @@
             android:layout_marginStart="7.5dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:elevation="50dp"
             android:fitsSystemWindows="false"
             android:iconifiedByDefault="true"
             android:layoutDirection="rtl"
             android:padding="0dp"
-            android:queryBackground="@color/white"
+            android:queryBackground="@drawable/searchview_bg"
             android:queryHint="@string/search"
             android:searchIcon="@drawable/search_icon"
             android:visibility="visible"/>
@@ -76,7 +75,6 @@
             android:layout_marginRight="20dp"
             android:layout_marginBottom="20dp"
             android:clickable="true"
-            android:elevation="10dp"
             android:focusable="true"
             android:visibility="visible"
             map:layout_constraintTop_toBottomOf="@+id/searchView"
